--- a/main_app/templates/main_app/car_form.html
+++ b/main_app/templates/main_app/car_form.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
-
 {% block content %}
-<!-- New if/else block -->
+
+<div class="container forms">
+  <!-- New if/else block -->
   {% if object %}
-    <h1>Edit <span class="teal-text">{{object.make}}/{{object.model}}</span></h1>
+  <h1>Edit <span class="teal-text">{{object.make}}/{{object.model}}</span></h1>
   {% else %}
-    <h1>Add Car</h1>
+  <h1>Add Car</h1>
   {% endif %}
   <!-- Leaving the action empty makes the form post to the same url used to display it -->
   <form action="" method="post">
@@ -17,4 +18,6 @@
     </table>
     <input type="submit" value="Submit!" class="btn">
   </form>
+</div>
+
 {% endblock %}
