--- a/main_app/templates/cars/index.html
+++ b/main_app/templates/cars/index.html
@@ -58,7 +58,7 @@
           </span>
         </p>
         <p class="card-text">Range p/ charge: {{ car.erange }} miles</p>
-        <p style="font-weight: bold;">${{ car.price }} per/day</p>
+        <p class="index-price" style="margin-top: 5px;">${{ car.price }} per/day</p>
         <a href="{% url 'detail' car.id %}" class="btn-book">Book Now</a>
       </div>
     </div>
