--- a/main_app/templates/main_app/car_confirm_delete.html
+++ b/main_app/templates/main_app/car_confirm_delete.html
@@ -1,13 +1,16 @@
 {% extends 'base.html' %}
-
 {% block content %}
+
+<div class="container">
+
   <h1>Delete Car</h1>
-
+  
   <h4>Are you sure you want to delete <span class="teal-text">{{object.make}}/{{object.model}}</span>?</h4>
-
+  
   <form action="" method="POST">
     {% csrf_token %}
     <input type="submit" value="Yes - Delete!" class="btn">
-    <a href="{% url 'detail' car.id %}">Cancel</a>
+    <a class="btn" href="{% url 'detail' car.id %}">Cancel</a>
   </form>
+</div>
 {% endblock %}
