--- a/main_app/templates/main_app/car_form.html
+++ b/main_app/templates/main_app/car_form.html
@@ -16,7 +16,7 @@
       <!-- Render the inputs inside of <tr>s & <td>s -->
       {{ form.as_table }}
     </table>
-    <input type="submit" value="Submit!" class="btn">
+    <input type="submit" value="Confirm!" class="btn">
   </form>
 </div>
 
